# iDoris

./: .env.example  .gitignore  .gitmodules  README.md  _Prism 项目深度分析报告 .md  remove_leaked_keys.sh
.github/workflows/: check-secrets.yml
docs/: AI_ASSISTANT_DESIGN.md  DEVELOPMENT_ROADMAP.md  EVALUATION_REPORT.md  basic-framework.md  doris-writer.md  tech-stack.md
local_ai_assistant/: .env.example  .gitignore  Cargo.toml  Dioxus.toml  README.md  build-all.sh  check_output.txt  check_output_final.txt  download_models.sh  download_models_hf.sh  download_to_hf_cache.sh  download_to_models.sh  quick_download.sh  run.sh  setup_hf_cache.sh  setup_python.sh
local_ai_assistant/assets/: tailwind.css
local_ai_assistant/config/: default.toml
local_ai_assistant/context/: README.md  eip-7702.md  sample.md
local_ai_assistant/docs/: RAG_SOLUTIONS.md  phase-2-4-content-workflow.md  phase-2-5-video-generation.md  phase2-plan.md  phase3-1-summary.md  phase3-plan.md
local_ai_assistant/src/: main.rs
local_ai_assistant/src/components/: app.rs  chat.rs  content_editor.rs  content_package.rs  image_gen.rs  message.rs  mod.rs  model_manager.rs  seo_panel.rs  settings.rs  settings_page.rs  settings_page.rs.backup  sidebar.rs  tts_panel.rs  video_gen.rs
local_ai_assistant/src/config/: mod.rs  settings.rs
local_ai_assistant/src/content/: blog_post.rs  mod.rs  outline.rs
local_ai_assistant/src/core/: config.rs  content_generator.rs  content_source.rs  embedding.rs  error.rs  image_gen.rs  llm.rs  mod.rs  model_manager.rs  seo.rs  tts.rs  vector_store.rs  video_gen.rs
local_ai_assistant/src/models/: blog_post.rs  chat.rs  content_package.rs  content_template.rs  document.rs  mod.rs  model_info.rs  session.rs  settings.rs  video_gen.rs
local_ai_assistant/src/server_functions/: blog_generation.rs  chat.rs  content.rs  context.rs  image.rs  mod.rs  server_model_manager.rs  server_video_gen.rs  session.rs  tts.rs
local_ai_assistant/src/services/: mod.rs  rag_service.rs  session_service.rs
local_ai_assistant/src/storage/: database.rs  mod.rs
local_ai_assistant/src/styles/: model_manager.css
