[package]
name = "local_ai_assistant"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Your Name <your@email.com>"]
description = "A cross-platform local AI assistant based on rusty_bot"

[dependencies]
dioxus = { version = "0.7.2", features = ["fullstack"] }
kalosm = { git = "https://github.com/floneum/floneum", features = ["language", "surrealdb"], optional = true }
image = { version = "0.25", optional = true }
base64 = { version = "0.22", optional = true }
tokio = "1.45.1"
web-sys = { version = "0.3.77", features = ["console"] }
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.100"
futures = "0.3.31"
server_fn = "0.7"
comrak = "0.39.0"
surrealdb = { version = "2.3.3", features = ["kv-surrealkv", "kv-mem"], optional = true }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

# Phase 1 additions for session persistence
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }

# Phase 2.1+ for runtime model switching
scopeguard = { version = "1.2", optional = true }
once_cell = { version = "1.19", optional = true }
dirs = { version = "5.0", optional = true }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:kalosm", "dep:surrealdb", "dep:rusqlite", "dep:scopeguard", "dep:once_cell", "dep:image", "dep:base64", "dep:dirs"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[build]
rustflags = ["-C", "target-cpu=native"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "target-feature=-avx,-avx2"]
