[package]
name = "local_ai_assistant"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Your Name <your@email.com>"]
description = "A cross-platform local AI assistant based on rusty_bot"

[dependencies]
dioxus = { version = "0.7.2", features = ["fullstack"] }
kalosm = { git = "https://github.com/floneum/floneum", features = ["language", "surrealdb"], optional = true }
image = { version = "0.25", optional = true }
base64 = { version = "0.22", optional = true }
tokio = { version = "1.45.1", features = ["sync"] }
serde_json = "1.0"
web-sys = { version = "0.3.77", features = ["console"] }
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.100"
futures = "0.3.31"
server_fn = { version = "0.7", features = ["default"] }
comrak = "0.39.0"
surrealdb = { version = "2.3.3", features = ["kv-surrealkv", "kv-mem"], optional = true }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

# Phase 1 additions for session persistence
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }

# Phase 2.1+ for runtime model switching
scopeguard = { version = "1.2", optional = true }
once_cell = { version = "1.19", optional = true }
dirs = { version = "5.0", optional = true }


# Phase 2.4 Content Workflow
feed-rs = { version = "2.1", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
readability = { version = "0.3", optional = true }

# Phase 2.5 Video Generation
lazy_static = { version = "1.5", optional = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
hex = { version = "0.4", optional = true }
dotenv = { version = "0.15", optional = true }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "tokio/process", "dep:kalosm", "dep:surrealdb", "dep:rusqlite", "dep:scopeguard", "dep:once_cell", "dep:image", "dep:base64", "dep:dirs", "dep:feed-rs", "dep:reqwest", "dep:readability", "dep:lazy_static", "dep:sha2", "dep:hmac", "dep:hex", "dep:dotenv"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

# Build configuration moved to .cargo/config.toml if needed
# Removed unused manifest keys that were causing warnings
